2004-10-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Added #defines
	EAM_DATASTRINGS and EAM_HISTOGRAMS.

	* src/makefile.all: Added breaders.$(O) to COREOBJS.

2004-10-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_graphics): Initialize font-tracking variable at the
	start of each plot (fixes problems seen with opening multiple plot 
	windows with different default fonts).

2004-10-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Added missing cmd_tried = 1.

2004-10-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (delete_plot): Fix small memory leak.

2004-10-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Allow explicit pm3d palette colors for line
	and point styles in non-Cartesian mapping modes. (bug #1005775)

2004-09-30  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Change #ifdef GD2_VERS to #if (GD2_VERS >= 2) everywhere.

	* term/emf.trm (EMF_set_font) term/tgif.trm (TGIF_set_font):
	Fix longstanding problems with the set_font routines;
	interpret font requests of the form ",<size>" as a request to rescale
	the current font to <size>.

2004-09-29  Ethan Merritt  <merritt@u.washington.edu>

	* demo/all.dem:  Remove vector.dem again, since it turns out that it
	breaks for any terminal type whose default value of 'set output' is
	not the current display.

	* demo/world2.dem: Set font explicitly to "Helvetica,7", since some
	terminal drivers do not like the partial font spec ",7".

	* src/hidden3d.c (set_hidden3doptions) src/hidden3d.h 
	src/unset.c (reset_command): New routine reset_hidden3doptions()
	called by "set hidden defaults" and also by "reset".

	* term/post.trm (PS_set_font ENHPS_set_font) term/pdf.trm (PDF_set_font)
	term/svg.trm (SVG_set_font): Do not allow the font to be set to "";
	interpret font requests of the form ",<size>" as a request to rescale
	the current font to <size>.
